// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar Render > fallback 1`] = `
<span
  class="ant-avatar ant-avatar-circle css-var-root ant-avatar-css-var"
>
  <span
    class="ant-avatar-string"
    style="-webkit-transform: scale(1); transform: scale(1);"
  >
    A
  </span>
</span>
`;

exports[`Avatar Render > rtl render > component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-avatar ant-avatar-circle css-var-root ant-avatar-css-var"
>
  <span
    class="ant-avatar-string"
    style="-webkit-transform: scale(0.72); transform: scale(0.72);"
  />
</span>
`;

exports[`Avatar Render > should calculate scale of avatar children correctly 1`] = `
<span
  class="ant-avatar-string"
  style="-webkit-transform: scale(0.72); transform: scale(0.72);"
>
  Avatar
</span>
`;

exports[`Avatar Render > should calculate scale of avatar children correctly 2`] = `
<span
  class="ant-avatar-string"
  style="-webkit-transform: scale(0.72); transform: scale(0.72);"
>
  xx
</span>
`;

exports[`Avatar Render > should calculate scale of avatar children correctly with gap 1`] = `
<span
  class="ant-avatar-string"
  style="-webkit-transform: scale(0.36); transform: scale(0.36);"
>
  Avatar
</span>
`;

exports[`Avatar Render > should handle onError correctly 1`] = `
<span
  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var"
>
  <img
    src="https://api.dicebear.com/10.x/pixel-art/svg"
  />
</span>
`;

exports[`Avatar Render > should show image on success after a failure state 1`] = `
<span
  class="ant-avatar ant-avatar-circle css-var-root ant-avatar-css-var"
>
  <span
    class="ant-avatar-string"
    style="-webkit-transform: scale(1); transform: scale(1);"
  >
    Fallback
  </span>
</span>
`;

exports[`Avatar Render > should show image on success after a failure state 2`] = `
<span
  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-root ant-avatar-css-var"
>
  <img
    src="https://api.dicebear.com/10.x/pixel-art/svg"
  />
</span>
`;

exports[`Avatar Render > support size is number 1`] = `
<span
  class="ant-avatar ant-avatar-circle css-var-root ant-avatar-css-var"
  style="width: 100px; height: 100px; font-size: 18px;"
>
  <span
    class="ant-avatar-string"
    style="-webkit-transform: scale(0.32); transform: scale(0.32);"
  >
    TestString
  </span>
</span>
`;
